--- a/index.html
+++ b/index.html
@@ -9,8 +9,20 @@
 </head>
 
 <body>
-    <h1>test 測試</h1>
-    <a href="./tablelab/table.html">我是課表作業</a>
+    <h1>Build School</h1>
+    <ol>
+        <li><a href="./tablelab/table.html">我是課表作業</a></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ol>
+
     <p>nnn</p>
 </body>
 
