--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <h1>Build School</h1>
     <ol>
         <li><a href="./tablelab/table.html">我是課表作業</a></li>
-        <li></li>
+        <li>
+            <a href="./homework2.shopee/shopee.html"></a>
+        </li>
         <li></li>
         <li></li>
         <li></li>
