--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <ol>
         <li><a href="./tablelab/table.html">我是課表作業</a></li>
         <li>
-            <a href="./homework2.shopee/shopee.html"></a>
+            <a href="./homework2.shopee/shopee.html">我是蝦皮切版作業</a>
         </li>
         <li></li>
         <li></li>
