update table link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Build School</h1>
     <ol>
-        <li><a href="./tablelab/table.html">我是課表作業</a></li>
+        <li><a href="./homework1.tablelab/table.html">我是課表作業</a></li>
         <li>
             <a href="./homework2.shopee/shopee.html">我是蝦皮切版作業</a>
         </li>
