--- a/homework1.tablelab/table.html
+++ b/homework1.tablelab/table.html
@@ -16,6 +16,10 @@
         table {
             text-align: center;
         }
+        
+        .height {
+            height: 100px;
+        }
     </style>
 </head>
 
@@ -205,7 +209,7 @@
                 <td rowspan="2">80</td>
                 <td>12:00<br />12:40</td>
                 <td colspan="5">午餐時間</td>
-                <td colspan="2" rowspan="3">綜合活動</td>
+                <td colspan="2" rowspan="3" class="height">綜合活動</td>
                 <td rowspan="3 ">120</td>
                 <td rowspan="3 ">劉晨華</td>
                 <!-- <td></td>
