--- a/homework1.tablelab/table.html
+++ b/homework1.tablelab/table.html
@@ -35,7 +35,7 @@
             width: 60px;
         }
         
-        .class-times {
+        .Types-of-courses {
             width: 170px;
         }
         
@@ -86,7 +86,7 @@
                     <td></td>
                     <td></td>
                     <td></td> -->
-                    <td colspan="2" class="class-times">領域別</td>
+                    <td colspan="2" class="Types-of-courses">領域別</td>
                     <!-- <td></td> -->
                     <td>分鐘</td>
                     <td>授課老師</td>
