--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <li>
             <a href="./homework2.shopee/shopee.html">我是蝦皮切版作業</a>
         </li>
-        <li></li>
+        <li><a href="./homework2.google/google.html">我是 Google 切版作業</a></li>
         <li></li>
         <li></li>
         <li></li>
