--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             <a href="./homework2.shopee/shopee.html">我是蝦皮切版作業</a>
         </li>
         <li><a href="./homework2.google/google.html">我是 Google 切版作業</a></li>
+        <li>
+            <a href="./homework3.shopline/SHOPLINE.html">我是 SHOPLINE 切版作業</a>
+        </li>
         <li></li>
         <li></li>
         <li></li>
