update variegated shop-categories

--- a/homework2.google/google.html
+++ b/homework2.google/google.html
@@ -131,7 +131,7 @@
         .search-area-search-form::after {
             border-radius: 50%;
             position: relative;
-            content: "";
+            .search-area   content: "";
             height: 27px;
             width: 27px;
             background-color: #fff;
