--- a/homework4.Variegated/Variegated.html
+++ b/homework4.Variegated/Variegated.html
@@ -1,12 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Variegated</title>
+    <script src="https://kit.fontawesome.com/3807b66583.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./reset.css" />
     <link rel="stylesheet" href="./style.css" />
-  </head>
-  <body></body>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap');
+    </style>
+</head>
+
+<body>
+    <div class="homepage">
+        <header class="header">
+            <div class="header-shop-customer-information">
+                <div class="shop-information">
+                    <div class="telephone-number shop-information-item">
+
+                        <address>
+                    <span>Call us:</span>
+                    <span>
+                  <a href="tel:+3(800) 2345-6789">+3(800) 2345-6789</a>
+                </address>
+                        </span>
+                    </div>
+                    <div class="telephone-number-border shop-information-item "></div>
+
+                    <div class="business-hours shop-information-item">
+                        7 Days a week from 9:00 am to 7:00 pm
+                    </div>
+                </div>
+
+                <div class="customer-information">
+
+
+                    <div class="customer-information-box">
+                        <div class="customer-total-amount-area .customer-information-content ">USD, $ <span class="customer-total-amount"></span></div>
+                    </div>
+
+
+                    <div class="customer-information-box">
+                        <div class="customer-shopping-cart .customer-information-content "><i class="fa-solid fa-cart-shopping"><span class="number-of-products"></span></i>
+                        </div>
+                    </div>
+
+                    <div class="customer-information-box">
+
+                        <div class="customer-login .customer-information-content "> Login</div>
+                    </div>
+
+
+                    <div class="customer-information-box customer-search-box">
+                        <div class="customer-search .customer-information-content ">
+                            <form action=""><label for=""><input type="search" placeholder="Search..."></label></form>
+                            <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+                        </div>
+                    </div>
+
+
+
+                </div>
+            </div>
+            <div class="header-nav">
+
+
+                <div class="header-nav-logo"><img src="./pic/logo.webp" alt="logo"></div>
+                <nav class="header-nav-content">
+                    <ul class="header-nav-content-ul">
+                        <li class="header-nav-content-li">HOME</li>
+                        <li class="header-nav-content-li">ABOUT</li>
+                        <li class="header-nav-content-li">FEATURES</li>
+                        <li class="header-nav-content-li">BLOG</li>
+                        <li class="header-nav-content-li">SHOP</li>
+                        <li class="header-nav-content-li">CONTACTS</li>
+                    </ul>
+                </nav>
+                <ul class="header-nav-social-media">
+                    <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-google"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                </ul>
+
+            </div>
+        </header>
+        <main>
+            <article class="variegated">
+                <h1 class="variegated-index">VARIEGATED</h1>
+                <section class="discount">
+                    <div class="dicount-width">
+
+                        <div class="discount-carousel">
+                            <div class="discount-carousel-pic"><img src="./pic/slider1.webp" alt="discount-img"></div>
+                            <div class="discount-carousel-text">
+                                <h2 class="discount-carousel-text-discount">-20% SALE</h2>
+                                <h3 class="discount-carousel-text-title">BE A CHERRY ON PIE<br>IN ANY SITUATION</h3>
+                                <div class="discount-carousel-text-brorder"></div>
+                                <p class="discount-carousel-text-content">Experiment, mix and showcase colors, textures and styles!<br> Be yourself and impress others!</p>
+                                <div class="discount-carousel-text-more">
+                                    <a class="discount-carousel-text-more" href="#">→ Read More</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="discount-group">
+                            <ul class="discount-group-ul">
+                                <li class="discount-group-li">
+                                    <h2 class="title">free next day delivey, excludes sale.</h2>
+                                    <p class="content">on order over $49</p>
+                                </li>
+                                <li class="discount-group-li">
+                                    <h2 class="title">30% OFF 100’S PANTYS</h2>
+                                    <p class="content">use code: pantyup 30</p>
+                                </li>
+                                <li class="discount-group-li">
+                                    <h2 class="title">20% STUDENT DISCOUNT PLUS</h2>
+                                    <p class="content">free next day delivey, excludes sale.</p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </section>
+                <section class="shop-categories">
+                    <div class="shop-categories-width">
+
+                        <h2 class="shop-categories-title"> SHOP CATEGORIES</h2>
+                        <ul class="shop-categories-group">
+                            <li class="shop-categories-group-item">
+                                <div class="img"><img src="./pic/cat5-275x376.jpg" alt="Blazers"></div>
+                                <h3 class="title"><span class="border"></span> Blazers</h3>
+                            </li>
+                            <li class="shop-categories-group-item">
+                                <div class="img"><img src="./pic/cat4-275x376.jpg" alt="Dresses"></div>
+                                <h3 class="title"><span class="border"></span> Dresses</h3>
+                            </li>
+                            <li class="shop-categories-group-item">
+                                <div class="img"><img src="./pic/cat3-275x376.jpg" alt="Jumpsuits"></div>
+                                <h3 class="title"><span class="border"></span> Jumpsuits</h3>
+                            </li>
+                            <li class="shop-categories-group-item">
+                                <div class="img"><img src="./pic/cat2-275x376.jpg" alt="New-Arrival"></div>
+                                <h3 class="title"><span class="border"></span> New Arrival</h3>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="bgc"></div>
+
+                </section>
+                <section class="favorite-blouses"></section>
+                <section></section>
+                <section></section>
+                <section></section>
+                <section></section>
+                <section></section>
+                <section></section>
+            </article>
+        </main>
+        <footer></footer>
+    </div>
+</body>
+
 </html>
