update variegated favorite-blouses

--- a/homework4.Variegated/Variegated.html
+++ b/homework4.Variegated/Variegated.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Variegated</title>
+    <title>Variegated - Fashion & Beauty</title>
     <script src="https://kit.fontawesome.com/3807b66583.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./reset.css" />
     <link rel="stylesheet" href="./style.css" />
@@ -17,75 +17,61 @@
 <body>
     <div class="homepage">
         <header class="header">
-            <div class="header-shop-customer-information">
-                <div class="shop-information">
-                    <div class="telephone-number shop-information-item">
+            <div class="header-width">
 
-                        <address>
-                    <span>Call us:</span>
-                    <span>
-                  <a href="tel:+3(800) 2345-6789">+3(800) 2345-6789</a>
-                </address>
-                        </span>
-                    </div>
-                    <div class="telephone-number-border shop-information-item "></div>
-
-                    <div class="business-hours shop-information-item">
-                        7 Days a week from 9:00 am to 7:00 pm
-                    </div>
-                </div>
-
-                <div class="customer-information">
-
-
-                    <div class="customer-information-box">
-                        <div class="customer-total-amount-area .customer-information-content ">USD, $ <span class="customer-total-amount"></span></div>
-                    </div>
-
-
-                    <div class="customer-information-box">
-                        <div class="customer-shopping-cart .customer-information-content "><i class="fa-solid fa-cart-shopping"><span class="number-of-products"></span></i>
+                <div class="header-shop-customer-information">
+                    <div class="shop-information">
+                        <div class="telephone-number shop-information-item">
+                            <address>
+                        <span>Call us:</span>
+                        <span>
+                      <a href="tel:+3(800) 2345-6789">+3(800) 2345-6789</a>
+                    </address>
+                            </span>
+                        </div>
+                        <div class="telephone-number-border shop-information-item "></div>
+                        <div class="business-hours shop-information-item">
+                            7 Days a week from 9:00 am to 7:00 pm
                         </div>
                     </div>
-
-                    <div class="customer-information-box">
-
-                        <div class="customer-login .customer-information-content "> Login</div>
-                    </div>
-
-
-                    <div class="customer-information-box customer-search-box">
-                        <div class="customer-search .customer-information-content ">
-                            <form action=""><label for=""><input type="search" placeholder="Search..."></label></form>
-                            <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+                    <div class="customer-information">
+                        <div class="customer-information-box">
+                            <div class="customer-total-amount-area .customer-information-content ">USD, $ <span class="customer-total-amount"></span></div>
+                        </div>
+                        <div class="customer-information-box">
+                            <div class="customer-shopping-cart .customer-information-content "><i class="fa-solid fa-cart-shopping"><span class="number-of-products"></span></i>
+                            </div>
+                        </div>
+                        <div class="customer-information-box">
+                            <div class="customer-login .customer-information-content "> Login</div>
+                        </div>
+                        <div class="customer-information-box customer-search-box">
+                            <div class="customer-search .customer-information-content ">
+                                <form action=""><label for=""><input type="search" placeholder="Search..."></label></form>
+                                <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+                            </div>
                         </div>
                     </div>
-
-
-
                 </div>
-            </div>
-            <div class="header-nav">
-
-
-                <div class="header-nav-logo"><img src="./pic/logo.webp" alt="logo"></div>
-                <nav class="header-nav-content">
-                    <ul class="header-nav-content-ul">
-                        <li class="header-nav-content-li">HOME</li>
-                        <li class="header-nav-content-li">ABOUT</li>
-                        <li class="header-nav-content-li">FEATURES</li>
-                        <li class="header-nav-content-li">BLOG</li>
-                        <li class="header-nav-content-li">SHOP</li>
-                        <li class="header-nav-content-li">CONTACTS</li>
+                <div class="header-nav">
+                    <div class="header-nav-logo"><img src="./pic/logo.webp" alt="logo"></div>
+                    <nav class="header-nav-content">
+                        <ul class="header-nav-content-ul">
+                            <li class="header-nav-content-li">HOME</li>
+                            <li class="header-nav-content-li">ABOUT</li>
+                            <li class="header-nav-content-li">FEATURES</li>
+                            <li class="header-nav-content-li">BLOG</li>
+                            <li class="header-nav-content-li">SHOP</li>
+                            <li class="header-nav-content-li">CONTACTS</li>
+                        </ul>
+                    </nav>
+                    <ul class="header-nav-social-media">
+                        <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-google"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
                     </ul>
-                </nav>
-                <ul class="header-nav-social-media">
-                    <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-google"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-                </ul>
-
+                </div>
             </div>
         </header>
         <main>
@@ -150,8 +136,40 @@
                     <div class="bgc"></div>
 
                 </section>
-                <section class="favorite-blouses"></section>
-                <section></section>
+                <section class="favorite-blouses">
+                    <div class="favorite-blouses-items-group favorite-blouses-width">
+                        <div class="favorite-blouses-item"><img class="favorite-blouses-pic" src="./pic/image.webp" alt="favorite-blouses"></div>
+                        <div class="favorite-blouses-item">
+                            <div class="favorite-blouses-content">
+                                <h2 class="title">FAVOURITE BLOUSES</h2>
+                                <p class="text">Our new favourite blouses are defined by great all-over patterns and special details. Our new favourite blouses are defined by great all-over patterns and special details.
+
+                                </p>
+                                <a href="#" class="shop-btn">SHOP NOW</a>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="accessories">
+                    <ul class="accessories-group">
+                        <li class="accessories-group-item">
+                            <h2 class="title"></h2>
+                            <div class="pic"></div>
+                            <p class="text"></p>
+                        </li>
+                        <li class="accessories-group-item">
+                            <h2 class="title"></h2>
+                            <div class="pic"></div>
+                            <p class="text"></p>
+                        </li>
+                        <li class="accessories-group-item">
+                            <h2 class="title"></h2>
+                            <div class="pic"></div>
+                            <p class="text"></p>
+                        </li>
+                    </ul>
+
+                </section>
                 <section></section>
                 <section></section>
                 <section></section>
