blog-list-item update

--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
         <li>
             <a href="./homework3.shopline/SHOPLINE.html">我是 SHOPLINE 切版作業</a>
         </li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>
+            <a href="./homework4.Variegated/Variegated.html">我是 Variegated 切版作業</a
+        >
+      </li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
     </ol>
-</body>
-
+  </body>
 </html>
