--- a/homework4.Variegated/Variegated.html
+++ b/homework4.Variegated/Variegated.html
@@ -36,17 +36,17 @@
                     </div>
                     <div class="customer-information">
                         <div class="customer-information-box">
-                            <div class="customer-total-amount-area .customer-information-content ">USD, $ <span class="customer-total-amount"></span></div>
+                            <div class="customer-total-amount-area customer-information-content ">USD, $ <span class="customer-total-amount"></span></div>
                         </div>
                         <div class="customer-information-box">
-                            <div class="customer-shopping-cart .customer-information-content "><i class="fa-solid fa-cart-shopping"><span class="number-of-products"></span></i>
+                            <div class="customer-shopping-cart customer-information-content "><i class="fa-solid fa-cart-shopping"><span class="number-of-products"></span></i>
                             </div>
                         </div>
                         <div class="customer-information-box">
-                            <div class="customer-login .customer-information-content "> Login</div>
+                            <div class="customer-login customer-information-content "> Login</div>
                         </div>
                         <div class="customer-information-box customer-search-box">
-                            <div class="customer-search .customer-information-content ">
+                            <div class="customer-search customer-information-content ">
                                 <form action=""><label for=""><input type="search" placeholder="Search..."></label></form>
                                 <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
                             </div>
@@ -325,12 +325,22 @@
                     </div>
                 </section>
                 <section class="latest-news-area">
-                    <h2 class="latest-news-title">GET THE LATEST NEWS DELIVERED DAILY!</h2>
-                    <div class="latest-news-input-email">
-                        <form action=""><label for=""><input type="email"></label></form>
+                    <div class="latest-news-area-width">
+
+                        <h2 class="latest-news-title">GET THE LATEST NEWS DELIVERED DAILY!</h2>
+                        <div class="latest-news-input-email">
+                            <form action=""><label for=""><input type="email" placeholder="Enter please your emails"></label>
+
+                            </form>
+                            <a class="subscribe-btn" href="#">SUBSCRIBE</a>
+
+
+                        </div>
                     </div>
                 </section>
-                <section class="join-us-instagram-link"></section>
+                <section class="join-us-instagram-link">
+                    <a class="join-us-instagram-link-btn" href="#">@INSTAGRAM</a>
+                </section>
             </article>
         </main>
         <footer class="web-map">
@@ -368,7 +378,7 @@
                 </li>
             </ul>
             <div class="web-information">
-                <p class="power-by"></p>
+                <p class="power-by"> 2022 Variegated. All Rights Reserved</p>
                 <ul class="footer-social-media">
                     <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
                     <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
