--- a/homework4.Variegated/prictice.html
+++ b/homework4.Variegated/prictice.html
@@ -38,6 +38,19 @@
         </a> 效果吧！別忘了拖拉一下視窗看看 RWD 效果喔！
         </div>
     </div>
+
+    <form action="">
+        <div>
+            <label for="user_name">姓名：</label>
+            <input type="text" id="user_name" />
+        </div>
+        <div>
+            <!-- label 標籤內的 for 屬性刪掉 -->
+            <label>姓名：
+          <input type="text" />
+        </label>
+        </div>
+    </form>
 </body>
 
 </html>
