--- a/index.html
+++ b/index.html
@@ -11,18 +11,24 @@
 <body>
     <h1>Build School</h1>
     <ol>
-        <li><a href="./homework1.tablelab/table.html">我是課表作業</a></li>
+        <li>
+            <a href="./homework1.tablelab/table.html">我是課表作業</a>
+        </li>
         <li>
             <a href="./homework2.shopee/shopee.html">我是蝦皮切版作業</a>
         </li>
-        <li><a href="./homework2.google/google.html">我是 Google 切版作業</a></li>
+        <li>
+            <a href="./homework2.google/google.html">我是 Google 切版作業</a>
+        </li>
         <li>
             <a href="./homework3.shopline/SHOPLINE.html">我是 SHOPLINE 切版作業</a>
         </li>
         <li>
             <a href="./homework4.Variegated/Variegated.html">我是 Variegated 切版作業</a>
         </li>
-        <li><a href="./homework5.Toyota/Toyota-TNGA.html"></a>我是 TOYOTA TNGA 切版作業</li>
+        <li>
+            <a href="./homework5.Toyota/Toyota-TNGA.html">我是 TOYOTA TNGA 切版作業</a>
+        </li>
         <li></li>
         <li></li>
         <li></li>
