--- a/index.html
+++ b/index.html
@@ -12,23 +12,38 @@
     <h1>Build School</h1>
     <ol>
         <li>
-            <a href="./homework1.tablelab/table.html">我是課表作業</a>
+            <a href="./Amos/homework1.tablelab/table.html">我是課表作業</a>
         </li>
         <li>
-            <a href="./homework2.shopee/shopee.html">我是蝦皮切版作業</a>
+            <a href="./Amos/homework2.shopee/shopee.html">我是蝦皮切版作業</a>
         </li>
         <li>
-            <a href="./homework2.google/google.html">我是 Google 切版作業</a>
+            <a href="./Amos/homework2.google/google.html">我是 Google 切版作業</a>
         </li>
         <li>
-            <a href="./homework3.shopline/SHOPLINE.html">我是 SHOPLINE 切版作業</a>
+            <a href="./Amos/homework3.shopline/SHOPLINE.html">我是 SHOPLINE 切版作業</a>
         </li>
         <li>
-            <a href="./homework4.Variegated/Variegated.html">我是 Variegated 切版作業</a>
+            <a href="./Amos/homework4.Variegated/Variegated.html">我是 Variegated 切版作業</a>
         </li>
         <li>
-            <a href="./homework5.Toyota/Toyota-TNGA.html">我是 TOYOTA TNGA 切版作業</a>
+            <a href="./Amos/homework5.Toyota/Toyota-TNGA.html">我是 TOYOTA TNGA 切版作業</a>
         </li>
+        <li>
+            <a href="./Amos/homework6.sunplant-store/sunplant-store.html">我是 sunplant-store 切版作業</a>
+        </li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ol>
+
+    <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
         <li></li>
         <li></li>
         <li></li>
