--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </ol>
 
     <ol>
-        <li></li>
+        <li><a href="./JavaScript/homework1.SelfIntroduction/index.html">我是 JavaScript 自我介紹</a></li>
         <li></li>
         <li></li>
         <li></li>
