update sunplant nav

--- a/Amos/homework6.sunplant-store/sunplant-store.html
+++ b/Amos/homework6.sunplant-store/sunplant-store.html
@@ -18,16 +18,42 @@
 
     <div class="sunplant">
         <header class="sunplant-header">
-            <nav class="sunplant-header-nav">
+            <input type="checkbox" name="sunplant-header-switch" id="sunplant-header-switch">
+            <label for="sunplant-header-switch" class="sunplant-header-switch">III</label>
+            <!-- <div class="sunplant-header-hamburger">III</div> -->
+            <div class="sunplant-header-main-menu">
+                <div class="sunplant-header-main-menu-this-and-login">
+                    <div class="sunplant-header-main-menu-this-and-login-menu">
+                        <a href="#">menu</a>
+                    </div>
+                    <div class="sunplant-header-main-menu-this-and-login-login">
+                        <a href="#">login</a>
+                    </div>
+                </div>
 
-                <ul class="sunplant-header-nav-ul-lv1">
-                    <li class="sunplant-header-nav-ul-lv1-li">Home</li>
-                    <li class="sunplant-header-nav-ul-lv1-li">Shop</li>
-                    <li class="sunplant-header-nav-ul-lv1-li">Featured</li>
-                    <li class="sunplant-header-nav-ul-lv1-li">Pages</li>
-                    <li class="sunplant-header-nav-ul-lv1-li">Element</li>
-                </ul>
-            </nav>
+                <nav class="sunplant-header-main-menu-nav">
+                    <ul class="sunplant-header-main-menu-nav-ul-lv1">
+                        <li class="sunplant-header-main-menu-nav-ul-lv1-li">
+                            <a href="#"> Home</a>
+                        </li>
+                        <li class="sunplant-header-main-menu-nav-ul-lv1-li">
+                            <a href="#">Shop</a>
+                        </li>
+                        <li class="sunplant-header-main-menu-nav-ul-lv1-li">
+                            <a href="#">Featured</a>
+                        </li>
+                        <li class="sunplant-header-main-menu-nav-ul-lv1-li">
+                            <a href="#">Pages</a>
+                        </li>
+                        <li class="sunplant-header-main-menu-nav-ul-lv1-li">
+                            <a href="#">Element</a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="sunplant-header-main-menu-close">
+                    <a href="#">close</a>
+                </div>
+            </div>
             <div class="sunplant-header-logo">
                 <img src="./pic/logo.webp" alt="sunplant-header-logo-img" class="sunplant-header-logo-img">
                 <h1 class="sunplant-header-logo-h1">SunPlant</h1>
