update nav from pc pad phone

--- a/Amos/homework6.sunplant-store/sunplant-store.html
+++ b/Amos/homework6.sunplant-store/sunplant-store.html
@@ -18,40 +18,55 @@
 
     <div class="sunplant">
         <header class="sunplant-header">
+
+            <label for="sunplant-header-switch" class="sunplant-header-switch">
+                <span class="sunplant-header-switch-span hamburger-top"></span>
+                <span class="sunplant-header-switch-span hamburger-center"></span>
+                <span class="sunplant-header-switch-span hamburger-bottom"></span>
+            </label>
             <input type="checkbox" name="sunplant-header-switch" id="sunplant-header-switch">
-            <label for="sunplant-header-switch" class="sunplant-header-switch">III</label>
             <!-- <div class="sunplant-header-hamburger">III</div> -->
             <div class="sunplant-header-main-menu">
-                <div class="sunplant-header-main-menu-this-and-login">
-                    <div class="sunplant-header-main-menu-this-and-login-menu">
-                        <a href="#">menu</a>
+                <div class="sunplant-header-main-menu-container">
+                    <div class="sunplant-header-main-menu-this-and-login">
+                        <!-- <div class="sunplant-header-main-menu-this-and-login-menu"> -->
+                        <div href="#" class="sunplant-header-main-menu-this-and-login-menu">
+                            <div class="hamburger-menu">
+                                <span class="sunplant-header-span hamburger-top"></span>
+                                <span class="sunplant-header-span hamburger-center"></span>
+                                <span class="sunplant-header-span hamburger-bottom"></span>
+                            </div>
+                            <div class="txt-menu">menu</div>
+                        </div>
+                        <!-- </div> -->
+                        <!-- <div class="sunplant-header-main-menu-this-and-login-login"> -->
+                        <div href="#" class="sunplant-header-main-menu-this-and-login-login">
+                            <div class="txt-login"><span> <i class="fa-regular fa-user"></i></span> login</div>
+                        </div>
+                        <!-- </div> -->
                     </div>
-                    <div class="sunplant-header-main-menu-this-and-login-login">
-                        <a href="#">login</a>
+                    <nav class="sunplant-header-main-menu-nav">
+                        <ul class="sunplant-header-main-menu-nav-ul-lv1">
+                            <li class="sunplant-header-main-menu-nav-ul-lv1-li">
+                                <a href="#"> Home</a>
+                            </li>
+                            <li class="sunplant-header-main-menu-nav-ul-lv1-li">
+                                <a href="#">Shop</a>
+                            </li>
+                            <li class="sunplant-header-main-menu-nav-ul-lv1-li">
+                                <a href="#">Featured</a>
+                            </li>
+                            <li class="sunplant-header-main-menu-nav-ul-lv1-li">
+                                <a href="#">Pages</a>
+                            </li>
+                            <li class="sunplant-header-main-menu-nav-ul-lv1-li">
+                                <a href="#">Element</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <div class="sunplant-header-main-menu-close">
+                        <label for="sunplant-header-switch" class="sunplant-header-switch-close">close</label>
                     </div>
-                </div>
-
-                <nav class="sunplant-header-main-menu-nav">
-                    <ul class="sunplant-header-main-menu-nav-ul-lv1">
-                        <li class="sunplant-header-main-menu-nav-ul-lv1-li">
-                            <a href="#"> Home</a>
-                        </li>
-                        <li class="sunplant-header-main-menu-nav-ul-lv1-li">
-                            <a href="#">Shop</a>
-                        </li>
-                        <li class="sunplant-header-main-menu-nav-ul-lv1-li">
-                            <a href="#">Featured</a>
-                        </li>
-                        <li class="sunplant-header-main-menu-nav-ul-lv1-li">
-                            <a href="#">Pages</a>
-                        </li>
-                        <li class="sunplant-header-main-menu-nav-ul-lv1-li">
-                            <a href="#">Element</a>
-                        </li>
-                    </ul>
-                </nav>
-                <div class="sunplant-header-main-menu-close">
-                    <a href="#">close</a>
                 </div>
             </div>
             <div class="sunplant-header-logo">
@@ -338,8 +353,9 @@
         </main>
         <footer class="sunplant-footer">
             <h2 class="sunplant-footer-title">SunPlant Information</h2>
-            <div class="sunplant-footer-logo"><img src="./pic/logo.webp" alt="sunplant-footer-logo-img"
-                    class="sunplant-footer-logo-img"></div>
+            <div class="sunplant-footer-logo">
+                <img src="./pic/logo.webp" alt="sunplant-footer-logo-img" class="sunplant-footer-logo-img">
+            </div>
             <ul class="sunplant-footer-our-information-list">
                 <li class="sunplant-footer-our-information-list-item">
                     <a href="#" class="sunplant-footer-our-information-list-item-link">
